--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="popup__end" class="popup__end">
         <div class="popup__body">
             <div class="popup__content">
-                <img src="img/logorock.jpg" alt="" class="start_image" width="100%">
+                <img src="img/whowant.png" alt="" class="start_image" width="100%">
                 <div class="popup__title">ВЫ СОБРАЛИ ВСЕХ <a href="#" class="popup__restart" id="restart" onClick="window.location.reload()"><i class="fas fa-sync-alt restart"></i></a></div>
                 <div class="popup__text">Игра не пытается кого-то оскорбить. Любите друг друга</div>
                 <p class="score" id="score__result">Вы набрали 12 очков</p>
